Concluido o escopo inicial do projeto. Incio da classe persistencia.